updated celery to work with node-ampq v0.1.7/v0.1.8 and celery 3.1

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Celery client for Node",
   "author": "Mher Movsisyan <mher.movsisyan@gmail.com>",
   "dependencies": {
-    "amqp": "*",
+    "nathan-amqp": "git+https://github.com/nathan-muir/node-amqp.git",
     "node-uuid": "*"
   },
   "repository": {
