--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "contributors": ["Mher Movsisyan <mher.movsisyan@gmail.com>"],
   "dependencies": {
     "debug": "~2.2",
-    "amqp-coffee": "~0.1",
+    "amqp-coffee": "0.1.24",
     "node-uuid": "~1.4",
     "async": "~1.2",
     "underscore": "~1.8",
