--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^10.0.1",
     "builtin-modules": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
@@ -40,6 +42,7 @@
     "rollup-plugin-replace": "^2.1.0"
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": [
       "airbnb",
       "plugin:prettier/recommended",
